# SyncPrjs

./: .gitignore  CHANGELOG.md  CIAO-PRINCIPLES.md  LICENSE.md  README.md  RECOMMENDATION.md  SECURITY.md  build.sh  cy-master.ini  pyproject.toml
docs/: CHANGELOG.md  LoggedExample-spec.md  folder-structure.md
src/: SyncPrjs.pyx  setup.py
src/LoggedExample.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/SyncPrjs/: __init__.py  cli.py
src/SyncPrjs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
