[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SyncPrjs"
version = "1.3.4"
description = "A robust command-line tool for managing multiple projects that follow a prefix-suffix naming convention."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Wilgat Wong", email = "wilgat.wong@gmail.com"}
]
keywords = ["logging", "sudo", "chronicle", "example"]

dependencies = [
    "ChronicleLogger>=1.3.1",
]

# Official project links (this is what shows on PyPI!)
[project.urls]
Homepage = "https://github.com/Wilgat/SyncPrjs"
Repository = "https://github.com/Wilgat/SyncPrjs"
Issues = "https://github.com/Wilgat/SyncPrjs/issues"

# This makes `sync-prjs` command available after pip install
[project.scripts]
sync-prjs = "SyncPrjs.cli:main"
